build(npm): switch from pnpm to npm

--- a/apps/web/Dockerfile
+++ b/apps/web/Dockerfile
@@ -40,10 +40,7 @@ ENV API_PASSWORD=$API_PASSWORD
 # RUN yarn build
 
 # If using npm comment out above and use below instead
-# RUN npm run build
-
-# If using pnpm comment out above and use below instead
-RUN pnpm run build
+RUN npm run build
 
 # Production image, copy all the files and run next
 FROM base AS runner
