build(docker): add github docker images

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,9 @@ services:
   # CMS Kirby
   php:
     container_name: 'codelibrary_php'
-    build:
-      dockerfile: ./Dockerfile-Cms
+    # build:
+    #   dockerfile: ./apps/cms/Dockerfile
+    image: ghcr.io/hfg-gmuend/codelibrary-cms:main
     restart: unless-stopped
     volumes:
       - ./apps/cms/assets:/srv/assets/
@@ -44,13 +45,14 @@ services:
   # Frontend NextJS
   web:
     container_name: 'codelibrary_web'
-    build:
-      dockerfile: ./Dockerfile-Web
-      args:
-        API_IMAGE_HOST: ${API_IMAGE_HOST}
-        API_HOST: ${API_HOST}
-        API_USERNAME: ${API_USERNAME}
-        API_PASSWORD: ${API_PASSWORD}
+    # build:
+    #   dockerfile: ./apps/web/Dockerfile
+    #   args:
+    #     API_IMAGE_HOST: ${API_IMAGE_HOST}
+    #     API_HOST: ${API_HOST}
+    #     API_USERNAME: ${API_USERNAME}
+    #     API_PASSWORD: ${API_PASSWORD}
+    image: ghcr.io/hfg-gmuend/codelibrary-web:main
     env_file:
       - .env
     depends_on:
